# quotex-bot-

./: .env  README.MD  config.json  demo_signal_generator.py  improved_signal_generator.py  improved_signal_generator_all_assets.py  improved_signal_generator_all_assets_adapted.py  live_signal_generator.py  log-2026-04-02.txt  log-2026-04-03.txt  log-2026-04-05.txt  requirements.txt
API-Quotex-main/: MAHIR_QUOTEX_LAUNCHER.py  README.md  START_MAHIR_QUOTEX.bat  config.json  log-2025-12-01.txt  login.py  pyproject.toml  requirements.txt  session.json  setup.md  setup.py  test1.py
API-Quotex-main/api_quotex/: __init__.py  client.py  config.py  connection_keep_alive.py  constants.py  exceptions.py  login.py  models.py  monitoring.py  utils.py  websocket_client.py
API-Quotex-main/sessions/: config.json  session.json
fast_signal/: fast_signal.py  fast_signal_pro.py  fast_signal_yfinance.py
sessions/: config.json
